
- Unite clipping support has been removed from QPainter. The alternative is
  to unite QRegion's and using the result on QPainter.

- QLibrary::resolve() now returns a function pointer instead of a void
  pointer.

- QSslCertificate::alternateSubjectNames() is deprecated (but can be enabled
  via QT_DISABLE_DEPRECATED_BEFORE), use
  QSslCertificate::subjectAlternativeNames() instead.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

-

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* drop a bogus QChar::NoCategory enum value; the proper QChar::Other_NotAssigned
  value is returned for an unassigned codepoints now.

QtGui
-----

QtNetwork
---------

QtOpenGL
--------

QtScript
--------


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *