@@ -250,7 +250,7 @@ static int qt_tokenize(const char *s, ulong s_len, ulong *advance,
 /*
   returns true if the string s was correctly parsed, false otherwise.
 */
-static bool qt_parse_pattern(const char *s, uint *version, bool *debug, QByteArray *key)
+static bool qt_parse_pattern(const char *s, uint *version, bool *debug)
 {
     bool ret = true;
 
@@ -282,10 +282,6 @@ static bool qt_parse_pattern(const char *s, uint *version, bool *debug, QByteArr
             }
         } else if (qstrncmp("debug", pinfo.results[0], pinfo.lengths[0]) == 0) {
             *debug = qstrncmp("true", pinfo.results[1], pinfo.lengths[1]) == 0;
-        } else if (qstrncmp("buildkey", pinfo.results[0],
-                              pinfo.lengths[0]) == 0){
-            // save buildkey
-            *key = QByteArray(pinfo.results[1], pinfo.lengths[1]);
         }
     } while (parse == 1 && parselen > 0);
 
@@ -337,11 +333,11 @@ static long qt_find_pattern(const char *s, ulong s_len,
   we can get the verification data without have to actually load the library.
   This lets us detect mismatches more safely.
 
-  Returns false if version/key information is not present, or if the
+  Returns false if version information is not present, or if the
                 information could not be read.
-  Returns  true if version/key information is present and successfully read.
+  Returns  true if version information is present and successfully read.
 */
-static bool qt_unix_query(const QString &library, uint *version, bool *debug, QByteArray *key, QLibraryPrivate *lib = 0)
+static bool qt_unix_query(const QString &library, uint *version, bool *debug, QLibraryPrivate *lib = 0)
 {
     QFile file(library);
     if (!file.open(QIODevice::ReadOnly)) {
@@ -396,7 +392,7 @@ static bool qt_unix_query(const QString &library, uint *version, bool *debug, QB
 #endif // defined(Q_OF_ELF) && defined(Q_CC_GNU)
     bool ret = false;
     if (pos >= 0)
-        ret = qt_parse_pattern(filedata + pos, version, debug, key);
+        ret = qt_parse_pattern(filedata + pos, version, debug);
 
     if (!ret && lib)
         lib->errorString = QLibrary::tr("Plugin verification data mismatch in '%1'").arg(library);
@@ -636,7 +632,7 @@ typedef const char * __stdcall (*QtPluginQueryVerificationDataFunction)();
 typedef const char * (*QtPluginQueryVerificationDataFunction)();
 #endif
 
-bool qt_get_verificationdata(QtPluginQueryVerificationDataFunction pfn, uint *qt_version, bool *debug, QByteArray *key, bool *exceptionThrown)
+bool qt_get_verificationdata(QtPluginQueryVerificationDataFunction pfn, uint *qt_version, bool *debug, bool *exceptionThrown)
 {
     *exceptionThrown = false;
     const char *szData = 0;
@@ -649,7 +645,7 @@ bool qt_get_verificationdata(QtPluginQueryVerificationDataFunction pfn, uint *qt
 #else
     szData = pfn();
 #endif
-    return qt_parse_pattern(szData, qt_version, debug, key);
+    return qt_parse_pattern(szData, qt_version, debug);
 }
 
 bool QLibraryPrivate::isPlugin(QSettings *settings)
@@ -660,7 +656,6 @@ bool QLibraryPrivate::isPlugin(QSettings *settings)
 
 #ifndef QT_NO_PLUGIN_CHECK
     bool debug = !QLIBRARY_AS_DEBUG;
-    QByteArray key;
     bool success = false;
 
 #if defined(Q_OS_UNIX) && !defined(Q_OS_MAC)
@@ -710,16 +705,15 @@ bool QLibraryPrivate::isPlugin(QSettings *settings)
     }
     reg = settings->value(regkey).toStringList();
 #endif
-    if (reg.count() == 4 && lastModified == reg.at(3)) {
+    if (reg.count() == 3 && lastModified == reg.at(2)) {
         qt_version = reg.at(0).toUInt(0, 16);
         debug = bool(reg.at(1).toInt());
-        key = reg.at(2).toLatin1();
         success = qt_version != 0;
     } else {
 #if defined(Q_OS_UNIX) && !defined(Q_OS_MAC) && !defined(Q_OS_SYMBIAN)
         if (!pHnd) {
             // use unix shortcut to avoid loading the library
-            success = qt_unix_query(fileName, &qt_version, &debug, &key, this);
+            success = qt_unix_query(fileName, &qt_version, &debug, this);
         } else
 #endif
         {
@@ -767,11 +761,10 @@ bool QLibraryPrivate::isPlugin(QSettings *settings)
 #endif
                 bool exceptionThrown = false;
                 bool ret = qt_get_verificationdata(qtPluginQueryVerificationDataFunction,
-                                                   &qt_version, &debug, &key, &exceptionThrown);
+                                                   &qt_version, &debug, &exceptionThrown);
                 if (!exceptionThrown) {
                     if (!ret) {
                         qt_version = 0;
-                        key = "unknown";
                         if (temporary_load)
                             unload_sys();
                     } else {
@@ -801,14 +794,10 @@ bool QLibraryPrivate::isPlugin(QSettings *settings)
                                         // exception is thrown(will happen only when using a MS compiler)
         }
 
-        // Qt 4.5 compatibility: stl doesn't affect binary compatibility
-        key.replace(" no-stl", "");
-
 #ifndef QT_NO_SETTINGS
         QStringList queried;
         queried << QString::number(qt_version,16)
                 << QString::number((int)debug)
-                << QLatin1String(key)
                 << lastModified;
         settings->setValue(regkey, queried);
 #endif
@@ -840,31 +829,6 @@ bool QLibraryPrivate::isPlugin(QSettings *settings)
             .arg((qt_version&0xff00) >> 8)
             .arg(qt_version&0xff)
             .arg(debug ? QLatin1String("debug") : QLatin1String("release"));
-    } else if (key != QT_BUILD_KEY
-               // we may have some compatibility keys, try them too:
-#ifdef QT_BUILD_KEY_COMPAT
-               && key != QT_BUILD_KEY_COMPAT
-#endif
-#ifdef QT_BUILD_KEY_COMPAT2
-               && key != QT_BUILD_KEY_COMPAT2
-#endif
-#ifdef QT_BUILD_KEY_COMPAT3
-               && key != QT_BUILD_KEY_COMPAT3
-#endif
-               ) {
-        if (qt_debug_component()) {
-            qWarning("In %s:\n"
-                 "  Plugin uses incompatible Qt library\n"
-                 "  expected build key \"%s\", got \"%s\"",
-                 (const char*) QFile::encodeName(fileName),
-                 QT_BUILD_KEY,
-                 key.isEmpty() ? "<null>" : (const char *) key);
-        }
-        errorString = QLibrary::tr("The plugin '%1' uses incompatible Qt library."
-                 " Expected build key \"%2\", got \"%3\"")
-                 .arg(fileName)
-                 .arg(QLatin1String(QT_BUILD_KEY))
-                 .arg(key.isEmpty() ? QLatin1String("<null>") : QLatin1String((const char *) key));
 #ifndef QT_NO_DEBUG_PLUGIN_CHECK
     } else if(debug != QLIBRARY_AS_DEBUG) {
         //don't issue a qWarning since we will hopefully find a non-debug? --Sam
