@@ -56,7 +56,6 @@ const QString PI_HostAddress(QLS("HostAddress"));
 const QString PI_OSName(QLS("OSName"));
 const QString PI_OSVersion(QLS("OSVersion"));
 const QString PI_QtVersion(QLS("QtVersion"));
-const QString PI_BuildKey(QLS("BuildKey"));
 const QString PI_GitCommit(QLS("GitCommit"));
 const QString PI_QMakeSpec(QLS("QMakeSpec"));
 const QString PI_PulseGitBranch(QLS("PulseGitBranch"));
@@ -93,7 +92,6 @@ PlatformInfo PlatformInfo::localHostInfo()
     pi.insert(PI_HostName, QHostInfo::localHostName());
     pi.insert(PI_QtVersion, QLS(qVersion()));
     pi.insert(PI_QMakeSpec, QString(QLS(QMAKESPEC)).remove(QRegExp(QLS("^.*mkspecs/"))));
-    pi.insert(PI_BuildKey, QLibraryInfo::buildKey());
 #if defined(Q_OS_LINUX)
     pi.insert(PI_OSName, QLS("Linux"));
     QProcess uname;
