@@ -61,7 +61,6 @@ extern const QString PI_HostAddress;
 extern const QString PI_OSName;
 extern const QString PI_OSVersion;
 extern const QString PI_QtVersion;
-extern const QString PI_BuildKey;
 extern const QString PI_GitCommit;
 extern const QString PI_QMakeSpec;
 extern const QString PI_PulseGitBranch;
